--- a/build.gradle
+++ b/build.gradle
@@ -75,7 +75,7 @@ processResources
 
 jar {
     manifest {
-        attributes 'FMLCorePlugin': 'me.superckl.biometweaker.core.PrayersCore'
+        attributes 'FMLCorePlugin': 'me.superckl.biometweaker.core.BiomeTweakerCore'
         attributes 'FMLCorePluginContainsFMLMod': 'true'
     }
 }
