--- a/build.gradle
+++ b/build.gradle
@@ -44,7 +44,7 @@ minecraft {
     version = config.minecraft_version + "-" + config.forge_version
 
     replaceIn "reference/ModData.java"
-    replace "@VERSION@", "${config.mod_version}.${System.env.BUILD_NUMBER} ?: 0}"
+    replace "@VERSION@", "${config.mod_version}.${System.env.BUILD_NUMBER ?: 0}"
     runDir = "eclipse"
 }
 
