Adding tree gen removal. This only works for select biomes, and thus will not be documented yet.

--- a/src/main/resources/biometweaker_at.cfg
+++ b/src/main/resources/biometweaker_at.cfg
@@ -4,3 +4,5 @@ public net.minecraft.world.biome.BiomeGenBase field_76762_K # spawnableCreatureL
 public net.minecraft.world.biome.BiomeGenBase field_76761_J # spawnableMonsterList
 public net.minecraft.world.biome.BiomeGenBase field_76755_L # spawnableWaterCreatureList
 public net.minecraft.world.biome.BiomeGenBase field_82914_M # spawnableCaveCreatureList
+public net.minecraft.world.biome.BiomeGenBase field_76757_N # worldGeneratorTrees
+public net.minecraft.world.biome.BiomeGenBase field_76758_O # worldGeneratorBigTree
