Adding ability to disable forced event calls and defaulting config options to true

--- a/src/main/resources/BiomeTweaker.cfg
+++ b/src/main/resources/BiomeTweaker.cfg
@@ -1,6 +1,8 @@
 {
     //If true, BiomeTweaker will generate separate files for each biome when creating the status report.
     "separate files":true,
+    //If true, BiomeTweaker will attempt to use ASM to force biome color overrides. You can disable this if you are having issues with compatibility.
+    "force modded colors":true,
     //An array of tweak files to include. An example tweak file is created along with this configuration file.
     "include":[]
 }
