Adding asm blacklist config option and changing "force modded colors" to "enable light asm"

--- a/src/main/resources/BiomeTweaker.cfg
+++ b/src/main/resources/BiomeTweaker.cfg
@@ -1,8 +1,13 @@
 {
     //If true, BiomeTweaker will generate separate files for each biome when creating the status report.
     "separate files":true,
-    //If true, BiomeTweaker will attempt to use ASM to force biome color overrides. You can disable this if you are having issues with compatibility.
-    "force modded colors":true,
+    //If true, BiomeTweaker will only perform ASM changes necessary for it to function. 
+    //Tweaks such as color overrides and block replacement may not work in certain biomes. 
+    //You can enable this if you are having issues with compatibility.
+    "enable light asm":false,
+    //This can be used to specify biome classes BiomeTweaker should not touch with ASM. You can find the class for a biome in the output files.
+    //You should only be using this if you understand what ASM is, and you know the issue it is causing.
+    "asm blacklist":[]
     //An array of tweak files to include. An example tweak file is created along with this configuration file.
     "include":[]
 }
