--- a/src/main/resources/BiomeTweaker.cfg
+++ b/src/main/resources/BiomeTweaker.cfg
@@ -5,6 +5,11 @@
     //Tweaks such as color overrides and block replacement may not work in certain biomes. 
     //You can enable this if you are having issues with compatibility.
     "enable light asm":false,
+    //Enable this if you want BiomeTweaker to force topBlock and fillerBlock overrides in most biomes.
+    //This is done by using ASM to strip some assignments that happen in the "genTerrainBlocks" blocks. This will not work for all biomes.
+    //This WILL cause issues where some biomes will have incorrect top and filler blocks if you do not override them (Extreme Hills (M), Mutated Savannah, Taiga).
+    //light ASM must be disabled for this to have any effect.
+    "remove late block assignments":false,
     //This can be used to specify biome classes BiomeTweaker should not touch with ASM. You can find the class for a biome in the output files.
     //You should only be using this if you understand what ASM is, and you know the issue it is causing.
     "asm blacklist":[]
