Fixing malformed JSON

--- a/src/main/resources/BiomeTweaker.cfg
+++ b/src/main/resources/BiomeTweaker.cfg
@@ -12,7 +12,7 @@
     "remove late block assignments":false,
     //This can be used to specify biome classes BiomeTweaker should not touch with ASM. You can find the class for a biome in the output files.
     //You should only be using this if you understand what ASM is, and you know the issue it is causing.
-    "asm blacklist":[]
+    "asm blacklist":[],
     //An array of tweak files to include. An example tweak file is created along with this configuration file.
     "include":[]
 }
