--- a/build.gradle
+++ b/build.gradle
@@ -95,11 +95,11 @@ jar {
 
 tasks.build.dependsOn('signJar')
 
-if (!project.hasProperty("keystore_loc")) // keystore stuff
+if (!project.hasProperty("keystore_location")) // keystore stuff
     ext.keystore_location = "."
-if (!project.hasProperty("keystore_pass")) // keystore stuff
+if (!project.hasProperty("keystore_password")) // keystore stuff
     ext.keystore_password = ""
-if (!project.hasProperty("keystore_user")) // keystore stuff
+if (!project.hasProperty("keystore_alias")) // keystore stuff
     ext.keystore_alias = ""
 
 task signJar(dependsOn: ["reobf", "devJar"]) {
