--- a/build.gradle
+++ b/build.gradle
@@ -123,9 +123,7 @@ task signJar(dependsOn: ["reobf", "devJar"]) {
                     jar: file,
                     keystore: keystore_location,
                     alias: keystore_alias,
-                    storepass: keystore_password,
-                    sigalg: "SHA1withDSA",
-                    digestalg: "SHA1withDSA"
+                    storepass: keystore_password
             )
         }
     }
