--- a/build.gradle
+++ b/build.gradle
@@ -18,6 +18,8 @@ buildscript {
 apply plugin: 'forge'
 apply plugin: 'java'
 apply plugin: 'maven'
+sourceCompatibility = 1.7
+targetCompatibility = 1.7
 
 sourceSets.main{
     java{
