--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,5 @@ desktop.ini
 eclipse.bat
 setup.bat
 src/main/resources/nei_at.cfg
+BiomeTweaker-1.8.8_Client.launch
+BiomeTweaker-1.8.8_Server.launch
