Add "genTallPlants" to set command. #66

--- a/src/main/resources/biometweaker_at.cfg
+++ b/src/main/resources/biometweaker_at.cfg
@@ -4,3 +4,4 @@ public net.minecraft.world.biome.BiomeGenBase field_76762_K # spawnableCreatureL
 public net.minecraft.world.biome.BiomeGenBase field_76761_J # spawnableMonsterList
 public net.minecraft.world.biome.BiomeGenBase field_76755_L # spawnableWaterCreatureList
 public net.minecraft.world.biome.BiomeGenBase field_82914_M # spawnableCaveCreatureList
+public-f net.minecraft.world.biome.BiomeGenBase field_150610_ae # genTallFlowers
