Correct name for depend

--- a/build.gradle
+++ b/build.gradle
@@ -124,7 +124,7 @@ ext.keystore_location = "${System.env.keystore_location ?: "."}"
 ext.keystore_password = "${System.env.keystore_password ?: ""}"
 ext.keystore_alias = "${System.env.keystore_alias ?: ""}"
 
-task signJar(dependsOn: ["reobf", "devJar"]) {
+task signJar(dependsOn: ["reobfJar", "devJar"]) {
     inputs.dir jar.destinationDir
     inputs.file keystore_location
     inputs.property "keystore_alias", keystore_alias
