--- a/src/main/resources/BiomeTweaker.cfg
+++ b/src/main/resources/BiomeTweaker.cfg
@@ -6,7 +6,7 @@
     //You can enable this if you are having issues with compatibility.
     "enable light asm":false,
     //Enable this if you want BiomeTweaker to force topBlock and fillerBlock overrides in most biomes.
-    //This is done by using ASM to strip some assignments that happen in the "genTerrainBlocks" blocks. This will not work for all biomes.
+    //This is done by using ASM to strip some assignments that happen in the "genTerrainBlocks" method. This will not work for all biomes.
     //This WILL cause issues where some biomes will have incorrect top and filler blocks if you do not override them (Extreme Hills (M), Mutated Savannah, Taiga).
     //light ASM must be disabled for this to have any effect.
     "remove late block assignments":false,
