--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "ASMHelper"]
-	path = ASMHelper
+[submodule "dependencies/ASM-Helper"]
+	path = dependencies/ASM-Helper
 	url = https://github.com/squeek502/ASMHelper.git
