update coremod compat. Closes #81

--- a/.gitignore
+++ b/.gitignore
@@ -23,3 +23,5 @@ build/*
 run/*
 BiomeTweaker 1.8.8_Client.launch
 BiomeTweaker 1.8.8_Server.launch
+BiomeTweaker-1.8.8_Client.launch
+BiomeTweaker-1.8.8_Server.launch
