initial 1.9 port. Noted extreme slow down when running desert script.

--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ BiomeTweaker 1.8.8_Client.launch
 BiomeTweaker 1.8.8_Server.launch
 BiomeTweaker-1.8.8_Client.launch
 BiomeTweaker-1.8.8_Server.launch
+BiomeTweaker-1.9_Client.launch
+BiomeTweaker-1.9_Server.launch
