--- a/src/main/resources/biometweaker_at.cfg
+++ b/src/main/resources/biometweaker_at.cfg
@@ -1,5 +1,11 @@
-public net.minecraft.world.biome.BiomeGenBase field_76765_S # enableRain
-public net.minecraft.world.biome.BiomeGenBase field_76766_R # enableSnow
+public-f net.minecraft.world.biome.BiomeGenBase field_76791_y # biomeName
+public-f net.minecraft.world.biome.BiomeGenBase field_76748_D # baseHeight
+public-f net.minecraft.world.biome.BiomeGenBase field_76749_E # heightVariation
+public-f net.minecraft.world.biome.BiomeGenBase field_76750_F # temperature
+public-f net.minecraft.world.biome.BiomeGenBase field_76751_G # rainfall
+public-f net.minecraft.world.biome.BiomeGenBase field_76759_H # waterColor
+public-f net.minecraft.world.biome.BiomeGenBase field_76765_S # enableRain
+public-f net.minecraft.world.biome.BiomeGenBase field_76766_R # enableSnow
 public net.minecraft.world.biome.BiomeGenBase field_76762_K # spawnableCreatureList
 public net.minecraft.world.biome.BiomeGenBase field_76761_J # spawnableMonsterList
 public net.minecraft.world.biome.BiomeGenBase field_76755_L # spawnableWaterCreatureList
