--- a/build.gradle
+++ b/build.gradle
@@ -79,6 +79,8 @@ processResources
     from(sourceSets.main.resources.srcDirs) {
         exclude 'mcmod.info'
     }
+
+    rename '(.+_at.cfg)', 'META-INF/$1'
 }
 
 task apiJar(type: Jar, dependsOn: 'sourceMainJava') {
