attempt at maven

--- a/build.gradle
+++ b/build.gradle
@@ -104,6 +104,20 @@ artifacts {
   archives ssJar
 }
 
+task uploadJars(dependsOn: ["build"]) {
+	description = "uploads JARs"
+	if (project.hasProperty("local_maven")) {
+		apply plugin: 'maven'
+		uploadArchives {
+			repositories {
+				mavenDeployer {
+					repository(url: "file://${local_maven}")
+				}
+			}
+		}
+	}
+}
+
 jar {
     manifest {
         attributes 'FMLCorePlugin': 'me.superckl.biometweaker.core.BiomeTweakerCore'
