Revert "maven try 2"
This reverts commit bc90aaf6b361f716a5fa472fe8f67eb22686347f.

--- a/build.gradle
+++ b/build.gradle
@@ -104,15 +104,9 @@ artifacts {
   archives ssJar
 }
 
-ext.local_maven = "${System.env.local_maven ?: ""}"
-
 task uploadJars(dependsOn: ["build"]) {
 	description = "uploads JARs"
-
-  onlyIf{
-    return local_maven != ""
-  }
-
+	if (project.hasProperty("local_maven")) {
 		apply plugin: 'maven'
 		uploadArchives {
 			repositories {
@@ -121,6 +115,7 @@ task uploadJars(dependsOn: ["build"]) {
 				}
 			}
 		}
+	}
 }
 
 jar {
