--- a/.gitignore
+++ b/.gitignore
@@ -27,3 +27,5 @@ BiomeTweaker-1.8.8_Client.launch
 BiomeTweaker-1.8.8_Server.launch
 BiomeTweaker-1.9_Client.launch
 BiomeTweaker-1.9_Server.launch
+BiomeTweaker 1.9_Client.launch
+BiomeTweaker 1.9_Server.launch
