--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
-[submodule "dependencies/ASM-Helper"]
-	path = dependencies/ASM-Helper
+[submodule "ASMHelper"]
+	path = ASMHelper
 	url = https://github.com/squeek502/ASMHelper.git
+	branch = 1.9
