--- a/build.gradle
+++ b/build.gradle
@@ -40,7 +40,7 @@ group= "me.superckl.biometweaker"
 archivesBaseName = "BiomeTweaker"
 
 minecraft {
-    version = config.minecraft_version + "-" + config.forge_version + "-" + config.minecraft_version
+    version = config.minecraft_version + "-" + config.forge_version
     mappings = "snapshot_20160527"
 
     replaceIn "reference/ModData.java"
