--- a/build.properties
+++ b/build.properties
@@ -3,3 +3,5 @@ forge_version = 11.14.4.1577
 mod_version = 2.1
 api_version=1.0
 ss_version=1.0
+at_path=biometweaker_at.cfg
+core_path=me.superckl.biometweaker.core.BiomeTweakerCore
