fixed a bunch of wrongness in the build script. API zips and dev jars were broken.

--- a/build.properties
+++ b/build.properties
@@ -3,3 +3,5 @@ forge_version = 11.15.1.1722
 mod_version = 2.1
 api_version=1.0
 ss_version=1.0
+at_path=biometweaker_at.cfg
+core_path=me.superckl.biometweaker.core.BiomeTweakerCore
