--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ BiomeTweaker-1.9_Client.launch
 BiomeTweaker-1.9_Server.launch
 BiomeTweaker 1.9_Client.launch
 BiomeTweaker 1.9_Server.launch
+BiomeTweaker 1.10_Client.launch
+BiomeTweaker 1.10_Server.launch
