--- a/build.gradle
+++ b/build.gradle
@@ -40,8 +40,9 @@ group= "me.superckl.biometweaker"
 archivesBaseName = "BiomeTweaker"
 
 minecraft {
-    version = config.minecraft_version + "-" + config.forge_version
-    mappings = "snapshot_20160527"
+    version = "1.10-12.18.0.1981-1.10.0"
+	//hardcoded because it ends with 1.10.0??
+    mappings = "snapshot_20160518"
 
     replaceIn "reference/ModData.java"
     replace "@VERSION@", "${config.mod_version}.${System.env.BUILD_NUMBER ?: 0}"
