--- a/.gitignore
+++ b/.gitignore
@@ -25,3 +25,5 @@ BiomeTweaker 1.8.8_Client.launch
 BiomeTweaker 1.8.8_Server.launch
 BiomeTweaker-1.8.8_Client.launch
 BiomeTweaker-1.8.8_Server.launch
+/.gradle/
+/build/
