--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,9 @@
 minecraft_version = 1.11.2
 forge_version = 13.20.0.2226
+mcp_mappings = snapshot_nodoc_20170128
 mod_version = 2.2
 api_version=1.0
 ss_version=1.1
+bop_version=1.11-6.0.1.2137
 at_path=biometweaker_at.cfg
 core_path=me.superckl.biometweaker.core.BiomeTweakerCore
