--- a/build.gradle
+++ b/build.gradle
@@ -59,7 +59,7 @@ minecraft {
 version = "${config.minecraft_version}-${config.mod_version}.${System.getenv("BUILD_NUMBER") ?: 0}"
 
 dependencies {
-    compile "org.projectlombok:lombok:1.16.12"
+    compile "org.projectlombok:lombok:" + config.lombok_version
     compile "com.github.glitchfiend.biomesoplenty:BiomesOPlenty:" + config.bop_version + ":universal"
 }
 
