--- a/build.properties
+++ b/build.properties
@@ -4,6 +4,7 @@ mcp_mappings = snapshot_nodoc_20170128
 mod_version = 2.3
 api_version=1.0
 ss_version=1.1
-bop_version=1.11.2-6.0.2.2157
+bop_version=1.11.2-6.1.0.2211
+lombok_version=1.16.16
 at_path=biometweaker_at.cfg
 core_path=me.superckl.biometweaker.core.BiomeTweakerCore
