--- a/build.properties
+++ b/build.properties
@@ -1,6 +1,6 @@
 minecraft_version = 1.11.2
-forge_version = 13.20.0.2228
-mcp_mappings = snapshot_nodoc_20170128
+forge_version = 13.20.0.2315
+mcp_mappings = stable_nodoc_32
 mod_version = 3.0
 api_version=1.2
 ss_version=1.3
