--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,5 @@ BiomeTweaker 1.10_Server.launch
 /build/
 BiomeTweaker 1.11_Client.launch
 BiomeTweaker 1.11_Server.launch
+BiomeTweaker 1.12_Client.launch
+BiomeTweaker 1.12_Server.launch
