--- a/build.properties
+++ b/build.properties
@@ -1,9 +1,9 @@
-minecraft_version = 1.11.2
-forge_version = 13.20.0.2315
-mcp_mappings = stable_nodoc_32
+minecraft_version = 1.12
+forge_version = 14.21.0.2368
+mcp_mappings = snapshot_nodoc_20170625
 mod_version = 3.0
 api_version=1.3
 ss_version=1.3
-bop_version=1.11.2-6.1.0.2211
+bop_version=1.12-7.0.0.2278
 lombok_version=1.16.16
 at_path=biometweaker_at.cfg
