Remove BOP integration until there is a stable 1.12 version

--- a/build.gradle
+++ b/build.gradle
@@ -60,7 +60,7 @@ version = "${config.minecraft_version}-${config.mod_version}.${System.getenv("BU
 
 dependencies {
     compile "org.projectlombok:lombok:" + config.lombok_version
-    compile "com.github.glitchfiend.biomesoplenty:BiomesOPlenty:" + config.bop_version + ":universal"
+    //compile "com.github.glitchfiend.biomesoplenty:BiomesOPlenty:" + config.bop_version + ":universal"
 }
 
 processResources
