--- a/build.properties
+++ b/build.properties
@@ -6,4 +6,5 @@ api_version=1.7
 ss_version=1.7
 bop_version=1.12-7.0.0.2288
 lombok_version=1.16.18
+pngj_version=2.1.0
 at_path=biometweaker_at.cfg
