Allow disabling of scattered features #141

--- a/src/main/resources/biometweaker_at.cfg
+++ b/src/main/resources/biometweaker_at.cfg
@@ -11,3 +11,4 @@ public net.minecraft.world.biome.Biome field_76761_J # spawnableMonsterList
 public net.minecraft.world.biome.Biome field_76755_L # spawnableWaterCreatureList
 public net.minecraft.world.biome.Biome field_82914_M # spawnableCaveCreatureList
 public-f net.minecraft.world.biome.Biome field_180280_ag # DOUBLE_PLANT_GENERATOR
+public-f net.minecraft.world.gen.structure.MapGenScatteredFeature field_75061_e # BIOMELIST
