--- a/src/main/resources/mixins.biometweaker.json
+++ b/src/main/resources/mixins.biometweaker.json
@@ -4,7 +4,8 @@
   "compatibilityLevel": "JAVA_17",
   "refmap": "mixins.biometweaker.refmap.json",
   "mixins": [
-    "NoiseBasedChunkGeneratorMixin"
+    "NoiseBasedChunkGeneratorMixin",
+    "ChunkGeneratorMixin"
   ],
   "minVersion": "0.8"
 }
