--- a/gradle.properties
+++ b/gradle.properties
@@ -13,7 +13,7 @@ minecraft_version_range=[1.18.2,1.18.3)
 mappings = parchment
 mappings_version=2022.03.13-1.18.2
 forge_version=40.0.34
-forge_version_range=[39.1.0,)
+forge_version_range=[40.0.0,40.1.0)
 
 #########################################################
 # Provided APIs                                         #
